# vision_evaluate

./: .gitignore  LICENSE  README.md
backend/: .dockerignore  pyproject.toml
backend/eval_server/: debug_main.py  eval_config.py  gunicorn_batch  main.py
backend/eval_server/routers/: ai_predict.py  evaluate.py  logger.py  predict.py  upload.py  websocket_handler.py
backend/eval_server/rq/: consumer-dev.py  consumer.py  producer.py
backend/src/: confusionmatrix.py  eval_main.py  labelfile.py  labelme2coco.py  utils.py  val.py
backend/src/formats/: COCOConversionResult.py  COCOformat.py  DetectionData.py  EvaluateResult.py  coco_format.py  evaluate_format.py  evaluate_true_format.py  labelme_result.py
backend/tests/: test_main.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  axios.js  main.js
frontend/src/api/: evaluate.js  index.js  predict.js  upload.js  ws.js
frontend/src/assets/: main.css
frontend/src/components/: Charts.vue  drawResult.vue  evaluateTable.vue  option.js  predictResult.vue  predictResult_bak.vue
frontend/src/router/: index.js
frontend/src/stores/: commonStore.ts  evaluateStore.ts  predictStore.ts  types.ts
frontend/src/utils/: draw.js  draw_micropowder.js  utils.js
frontend/src/views/: AdjustArea.vue  AreaQuantile.vue  EvalMicroPowder.vue  EvalPredict.vue  TestFiles.vue  WsChat.vue
